Fix profiles wrap, closes #3

--- a/src/views/front-page/profile-search/profile-search.style.css
+++ b/src/views/front-page/profile-search/profile-search.style.css
@@ -66,7 +66,7 @@
 }
 
 
-#map{position:relative;height:300px;float:right;} 
+#map{position:relative;height:300px;float:right;margin-bottom: 40px;} 
 
 #map svg{display:block;}
 
